Fixed styling overlapping issue

--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ Theme URI: https://github.com/actuallyakash/evie-wp
 Author: Akash
 Author URI: http://akashgupta.xyz
 Description: A production-ready and minimal theme for your projects and websites. It is extremely lightweight, customizable, and works perfectly on modern browsers. Install the theme from WordPress and start customizing your site quickly. Only one level menu is supported.
-Version: 1.0.13
-Tested up to: 5.7
+Version: 1.0.15
+Tested up to: 6.0
 Requires at least:  5.6
 Requires PHP: 7.0
 License: GPLv2 or later
@@ -1032,10 +1032,6 @@ select::-ms-expand {
   opacity: 0.96;
   z-index: 1;
   background-color: #6C63FF;
-}
-
-.hero__overlay--gradient {
-  background: linear-gradient(to right, #6C63FF, #4641FF);
 }
 
 .hero__mask {
